[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/textures/icons/milk_free.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/icons/contains_sugar.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/PTSerif-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/interfaces/Items/PreviewRecipeItem.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/PT-BoldItalic_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/textures/icons/voided_heart_white.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/icons/filled_heart.png" type="Texture" id=8]
[ext_resource path="res://src/interfaces/Items/unique/SeasonInfoItem.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/interfaces/Items/InfoItem.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/textures/icons/voided_heart_grey.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/gaufres-vegan-2.jpg" type="Texture" id=12]
[ext_resource path="res://assets/textures/icons/gluten_free.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.156863, 0.180392, 0.243137, 1 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=9]
content_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxLine" id=17]
color = Color( 0.368627, 0.368627, 0.368627, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=16]
color = Color( 0.341176, 0.34902, 0.372549, 1 )
grow_begin = -3.0
grow_end = -3.0
vertical = true

[node name="PreviewRecipeItem" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 532, 92 )
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="ImageContainer" type="Control" parent="."]
visible = false
margin_right = 96.0
margin_bottom = 1080.0
rect_min_size = Vector2( 96, 96 )
rect_clip_content = true

[node name="TextureRect" type="TextureRect" parent="ImageContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 96 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 7

[node name="Button" type="Button" parent="."]
margin_right = 1836.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 92 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
enabled_focus_mode = 0
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 92 )
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 2
custom_constants/margin_left = 6
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Button/MarginContainer"]
margin_left = 6.0
margin_top = 2.0
margin_right = 1830.0
margin_bottom = 1078.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
alignment = 1

[node name="Label" type="Label" parent="Button/MarginContainer/VBoxContainer"]
margin_top = 495.0
margin_right = 1824.0
margin_bottom = 521.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Tagliatelles Au Saumon Frais sur son lit d'épinard"
clip_text = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Button/MarginContainer/VBoxContainer"]
margin_top = 525.0
margin_right = 1824.0
margin_bottom = 580.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 1800.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_constants/separation = 7

[node name="HBoxContainer2" type="HBoxContainer" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 1800.0
margin_bottom = 26.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_bottom = 26.0

[node name="PanelContainer" type="PanelContainer" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 10.0
margin_right = 52.0
margin_bottom = 26.0
mouse_filter = 1
custom_styles/panel = SubResource( 10 )

[node name="Category" type="Label" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/PanelContainer"]
margin_left = 6.0
margin_top = 2.0
margin_right = 36.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 11 )
text = "Plat"

[node name="Portions" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 62.0
margin_right = 129.0
margin_bottom = 26.0
hint_tooltip = "Parts"
icon = "portions"
icon_size = 24

[node name="VSeparator" type="VSeparator" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 139.0
margin_right = 139.0
margin_bottom = 26.0
custom_constants/separation = 0
custom_styles/separator = SubResource( 17 )
__meta__ = {
"_editor_description_": ""
}

[node name="PrepTime" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 149.0
margin_right = 216.0
margin_bottom = 26.0
hint_tooltip = "Temps de préparation"
icon = "preparation_time"
icon_size = 24

[node name="VSeparator2" type="VSeparator" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 226.0
margin_right = 226.0
margin_bottom = 26.0
custom_constants/separation = 0
custom_styles/separator = SubResource( 17 )

[node name="CookTime" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 236.0
margin_right = 303.0
margin_bottom = 26.0
hint_tooltip = "Temps de cuisson"
icon = "cook_time"
icon_size = 24

[node name="LabelRoot" type="HBoxContainer" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 1724.0
margin_right = 1800.0
margin_bottom = 26.0
size_flags_horizontal = 10
custom_constants/separation = 8

[node name="ContainsSugar" type="TextureRect" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/LabelRoot"]
modulate = Color( 0.392157, 0.541176, 0.764706, 1 )
margin_right = 20.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
hint_tooltip = "Contient du scure"
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="GlutenFree" type="TextureRect" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/LabelRoot"]
modulate = Color( 0.392157, 0.541176, 0.764706, 1 )
margin_left = 28.0
margin_right = 48.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
hint_tooltip = "Sans Gluten"
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="MilkFree" type="TextureRect" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2/LabelRoot"]
modulate = Color( 0.392157, 0.541176, 0.764706, 1 )
margin_left = 56.0
margin_right = 76.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 0 )
hint_tooltip = "Sans lait"
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 33.0
margin_right = 1800.0
margin_bottom = 55.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
margin_bottom = 22.0

[node name="SeasonInfoItem" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_right = 42.0
margin_bottom = 22.0
hint_tooltip = "Saisons"
compressed = true

[node name="VSeparator3" type="VSeparator" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 52.0
margin_right = 52.0
margin_bottom = 22.0
custom_constants/separation = 0
custom_styles/separator = SubResource( 17 )
__meta__ = {
"_editor_description_": ""
}

[node name="Diet" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 62.0
margin_right = 129.0
margin_bottom = 22.0
hint_tooltip = "Régime"
icon = "diet"
create_atlas = true
icon_size = 24

[node name="VSeparator4" type="VSeparator" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 139.0
margin_right = 139.0
margin_bottom = 22.0
custom_constants/separation = 0
custom_styles/separator = SubResource( 17 )
__meta__ = {
"_editor_description_": ""
}

[node name="Quality" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer3" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 149.0
margin_right = 216.0
margin_bottom = 22.0
hint_tooltip = "Qualité"
icon = "qualities"
create_atlas = true
icon_size = 24

[node name="Control" type="Control" parent="Button/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 1812.0
margin_right = 1824.0
margin_bottom = 55.0
rect_min_size = Vector2( 12, 0 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 1840.0
margin_right = 1844.0
margin_bottom = 1080.0
custom_styles/separator = SubResource( 16 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 1848.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 72, 0 )
alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer2"]
margin_left = 20.0
margin_top = 524.0
margin_right = 52.0
margin_bottom = 556.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
size_flags_horizontal = 6
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 11 )
